--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 authors = [{name = "Xinjie Chen", email = "xj-chen24@mails.tsinghua.edu.cn"}]
-name = "deep-compression"
+name = "neural-pruning"
 requires-python = ">= 3.11"
 version = "0.1.0"
-dependencies = ["huggingface-hub"]
+dependencies = ["huggingface-hub", "dacite>=1.9.2,<2"]
 
 [build-system]
 build-backend = "hatchling.build"
@@ -14,7 +14,7 @@ channels = ["conda-forge"]
 platforms = ["linux-64"]
 
 [tool.pixi.pypi-dependencies]
-deep_compression = { path = ".", editable = true }
+neural_pruning = { path = ".", editable = true }
 
 [tool.pixi.tasks]
 
@@ -29,15 +29,14 @@ outputs = [
 
 [tool.pixi.tasks.train]
 args = [{arg = "config_path", default = "configs/default.toml"}]
-cmd = "python deep_compression/train.py {{config_path}}"
+cmd = "python neural_pruning/train.py {{config_path}}"
 
 [tool.pixi.tasks.test]
 args = [{arg = "config_path", default = "configs/default.toml"}]
-cmd = "python deep_compression/test.py {{config_path}}"
-
+cmd = "python neural_pruning/test.py {{config_path}}"
 [tool.pixi.tasks.prune]
 args = [{arg = "config_path", default = "configs/default.toml"}]
-cmd = "python deep_compression/prune.py {{config_path}}"
+cmd = "python neural_pruning/prune.py {{config_path}}"
 
 [tool.pixi.dependencies]
 datasets = ">=4.2.0,<5"
