--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ authors = [{name = "Xinjie Chen", email = "xj-chen24@mails.tsinghua.edu.cn"}]
 name = "neural-pruning"
 requires-python = ">= 3.11"
 version = "0.1.0"
-dependencies = ["huggingface-hub", "dacite>=1.9.2,<2"]
+dependencies = ["huggingface-hub", "dacite>=1.9.2,<2", "tabulate>=0.9.0,<0.10"]
 
 [build-system]
 build-backend = "hatchling.build"
